--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/google.maps": "^3.58.1",
     "drizzle-kit": "^0.30.5",
     "wrangler": "^4.0.0"
   },
@@ -19,10 +20,12 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@googlemaps/extended-component-library": "^0.6.13",
     "@hono/zod-validator": "^0.4.1",
     "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@lucia-auth/adapter-sqlite": "^3.0.2",
     "@tanstack/react-query-devtools": "^5.69.0",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "drizzle-orm": "^0.40.0",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.6.3",
