--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@lucia-auth/adapter-sqlite": "^3.0.2",
     "@tanstack/react-query-devtools": "^5.69.0",
     "@vis.gl/react-google-maps": "^1.5.2",
+    "caniuse-lite": "^1.0.30001707",
     "drizzle-orm": "^0.40.0",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.6.3",
