--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,6 +9,7 @@ routes = [
 
 [vars]
 JWT_SECRET = "secret"
+GOOGLE_MAPS_API_KEY = "AIzaSyBarZdC3dMBHljW24FAJkDMvDNWkCZ6Byo"
 
 [observability]
 enabled = true
