--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tanstack/react-form": "^0.33.0",
     "@tanstack/react-query": "^5.59.3",
@@ -25,6 +28,7 @@
     "@tanstack/zod-form-adapter": "^0.33.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.451.0",
     "next-themes": "^0.3.0",
