--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "module": "server/index.ts",
   "type": "module",
   "scripts": {
+    "dev:all": "bunx concurrently \"bun run dev:frontend\" \"bun run dev\"",
+    "dev:frontend": "cd frontend && bun run dev",
     "start": "bunx wrangler dev",
     "dev": "bunx wrangler dev --live-reload",
     "local": "bunx drizzle-kit generate && bunx wrangler d1 migrations apply sheoak_ct",
@@ -11,9 +13,15 @@
     "gen-types": "bunx wrangler types"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "@types/bun": "latest",
     "@types/google.maps": "^3.58.1",
     "drizzle-kit": "^0.30.5",
+    "eslint": "^9.23.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.28.0",
     "wrangler": "^4.0.0"
   },
   "peerDependencies": {
