chore: Update deployment scripts in package.json
- Updated the `build` script to include schema generation and frontend build steps.
- Refined the `pre-deploy` script to apply remote database migrations.
- Enhanced the `deploy` script to ensure pre-deployment steps are executed before production deployment.

Signed-off-by: Jared Stanbrook <Jared.Stanbrook@outlook.com>

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev:frontend": "cd frontend && bun run dev",
     "start": "bunx wrangler dev",
     "dev": "bunx wrangler dev --live-reload",
+    "build": "bunx drizzle-kit generate && cd frontend && bun run build",
     "local": "bunx drizzle-kit generate && bunx wrangler d1 migrations apply sheoak_ct",
     "migrate": "bunx wrangler d1 migrations apply sheoak_ct",
     "gen-schema": "bunx drizzle-kit generate",
-    "gen-types": "bunx wrangler types"
+    "gen-types": "bunx wrangler types",
+    "pre-deploy": "bunx wrangler d1 migrations apply sheoak_ct --remote",
+    "deploy": "bunx run pre-deploy && wrangler deploy --env production"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
