Removes legacy API/db code and updates schema imports
Cleans up the codebase by deleting unused database example files and related API routes, consolidating schema imports to a new location. Updates references throughout the app to ensure consistency and maintainability. Also improves type flexibility in WebAuthn schema and minor UI robustness. Prepares for future refactoring and better structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
     "allowImportingTsExtensions": true,
     "lib": [
       "ESNext",
@@ -38,7 +39,8 @@
   },
   "include": [
     "worker/**/*",
-    "vite.config.ts"
+    "vite.config.ts",
+    "old/db"
   ],
   "exclude": [
     "node_modules",
