Removes legacy React SPA code and refines HTMX/join flow
Deletes all remaining React SPA files, routes, and APIs, fully transitioning the client to the HTMX/SSR architecture. Streamlines navigation, editor, and property selection for the new server-driven experience. Updates UI components for consistent rounded styling and adapts toast/flash messaging to use cookies for cross-request messages. Improves admin property, invoice, and tenancy flows for multi-property support. Cleans up unused assets and old context logic.

Prepares the project for a single-source-of-truth, server-rendered model and eliminates dual SPA/SSR maintenance overhead.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,5 +45,14 @@
   "exclude": [
     "node_modules",
     "dist"
+  ],
+  "plugins": [
+    {
+      "name": "ts-lit-plugin",
+      "rules": {
+        "no-incompatible-type-binding": "off",
+        "no-unknown-attribute": "off"
+      }
+    }
   ]
 }
