--- a/package.json
+++ b/package.json
@@ -20,38 +20,23 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@hono-rate-limiter/cloudflare": "^0.2.2",
     "@hono/vite-dev-server": "^0.23.0",
     "@hono/zod-validator": "^0.5.0",
-    "@lucia-auth/adapter-drizzle": "^1.1.0",
-    "@mdx-js/rollup": "^3.1.0",
-    "@oslojs/crypto": "^1.0.1",
-    "@oslojs/encoding": "^1.1.0",
     "@simplewebauthn/browser": "^13.2.2",
     "@simplewebauthn/server": "^13.2.2",
     "@simplewebauthn/types": "^12.0.0",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/zod-form-adapter": "^0.42.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.8.3",
     "hono": "^4.9.0",
     "lit": "^3.3.1",
-    "lucia": "^3.2.2",
     "lucide": "^0.560.0",
-    "lucide-react": "^0.557.0",
-    "next-themes": "^0.4.6",
     "otpauth": "^9.4.1",
+    "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
-    "recharts": "^2.15.4",
-    "sonner": "^2.0.7",
-    "tailwind": "^4.0.0",
-    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "wrangler": "^4.28.1",
+    "wrangler": "^4.61.1",
     "zod": "^4.1.5"
   },
   "devDependencies": {
