chore(release): prepare v1.0.0

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-GITHUB_API_TOKEN=""
-ENVIRONMENT="test"
+ENVIRONMENT="local"
 
 # ==========================================
 # CORE AUTHENTICATION
@@ -7,6 +6,10 @@ ENVIRONMENT="test"
 # Comma-separated list.
 # Options: passkey, password, pin, totp, email, sms
 AUTH_METHODS=passkey,password
+
+# Required secrets (set via wrangler secrets in production)
+JWT_SECRET=CHANGE_ME
+GOOGLE_MAPS_API_KEY=
 
 # Session settings (in milliseconds)
 SESSION_DURATION=86400000
@@ -17,7 +20,7 @@ MAX_SESSIONS_PER_USER=5
 # SECURITY & ACCESS CONTROL
 # ==========================================
 # Invite-only mode (optional). If set, only this email can register.
-ALLOWED_EMAILS=jared@test.com, miles@test.com
+ALLOWED_EMAILS=
 
 # Brute force protection
 MAX_FAILED_LOGIN_ATTEMPTS=5
@@ -31,24 +34,24 @@ REQUIRE_PHONE_VERIFICATION=false
 # ROLES & PERMISSIONS (RBAC)
 # ==========================================
 # 1. Available: All roles the system understands
-ROLES_AVAILABLE=user,editor,admin
+ROLES_AVAILABLE=tenant,landlord,admin
 
 # 2. Default: Assigned automatically upon registration
-ROLES_DEFAULT=user
+ROLES_DEFAULT=tenant
 
 # 3. Restricted: Cannot be requested via API (must be assigned via DB/Seed)
 ROLES_RESTRICTED=admin
 
 # 4. Permissions: All valid permission strings
-PERMISSIONS_AVAILABLE=blogs.create,blogs.read,blogs.update,blogs.delete,blogs.update.any,blogs.delete.any
+PERMISSIONS_AVAILABLE=
 
-ROLES_INHERENT="user:blogs.read,blogs.create,blogs.update;editor:blogs.read,blogs.create,blogs.update.any;admin:*"
+ROLES_INHERENT="admin:*"
 # ==========================================
 # PASSKEY / WEBAUTHN CONFIG
 # ==========================================
 # Required if AUTH_METHODS includes 'passkey'
 # NOTE: For local dev, RP_ID must be 'localhost'
-RP_NAME=My Local App
+RP_NAME=Tenant System (Local)
 RP_ID=localhost
 ORIGIN=http://localhost:5173
 
@@ -73,7 +76,7 @@ PIN_NUMBERS_ONLY=true
 # TOTP CONFIG
 # ==========================================
 # Required if AUTH_METHODS includes 'totp'
-TOTP_ISSUER=MyLocalApp
+TOTP_ISSUER=TenantSystem
 TOTP_ALGORITHM=SHA1
 TOTP_DIGITS=6
 TOTP_PERIOD=30
@@ -84,6 +87,6 @@ TOTP_PERIOD=30
 # Required only if 'email' or 'sms' methods are enabled above
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=dev@example.com
-SMTP_PASS=not_real_password
+SMTP_USER=
+SMTP_PASS=
 SMS_PROVIDER_API_KEY=mock_key
