--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     ],
     "types": [
       "./worker-configuration.d.ts",
-      "@types/node"
+      "@types/node",
+      "bun-types"
     ],
     "baseUrl": ".",
     "paths": {
@@ -40,6 +41,7 @@
   "include": [
     "worker/**/*",
     "tests/**/*",
+    "scripts/**/*",
     "drizzle.config.ts",
     "vite.config.ts",
     "old/db"
